* Moving code around. * Updating to work with a DS1307 RTC * WIP: currently got code compile issues.

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ framework = arduino
 board = uno
 ; Neopixel
 lib_install = 28
-; RTC 1307
-; lib_install = 83 or 145 or 274 or 421
-; Time
+; RTC 1307 (145 or 274 or 421)
+lib_install = 83
+; Time (TimeLib)
 lib_install = 44
