--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,5 @@
 platform = atmelavr
 framework = arduino
 board = uno
-; Neopixel
-lib_install = 28
-; RTC 1307 (145 or 274 or 421)
-lib_install = 83
-; Time (TimeLib)
-lib_install = 44
+; Neopixel, ; RTC 1307 (145 or 274 or 421), ; Time (TimeLib)
+lib_install = 28,83,44
