Added .vscode to .gitignore Commented out lib_install from plaformio.ino

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,4 @@ platform = atmelavr
 framework = arduino
 board = uno
 ; Neopixel, ; RTC 1307 (145 or 274 or 421), ; Time (TimeLib)
-lib_install = 28,83,44
+; lib_install = 28,83,44
