--- a/platformio.ini
+++ b/platformio.ini
@@ -1,25 +1,18 @@
-#
-# Project Configuration File
-#
-# A detailed documentation with the EXAMPLES is located here:
-# http://docs.platformio.org/en/latest/projectconf.html
-#
-
-# A sign `#` at the beginning of the line indicates a comment
-# Comment lines are ignored.
-
-# Simple and base environment
-# [env:mybaseenv]
-# platform = %INSTALLED_PLATFORM_NAME_HERE%
-# framework =
-# board =
-#
-# Automatic targets - enable auto-uploading
-# targets = upload
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
 
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
-; Neopixel, ; RTC 1307 (145 or 274 or 421), ; Time (TimeLib)
-; lib_install = 28,83,44
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.7.0
+	adafruit/RTClib@^1.12.4
+	paulstoffregen/Time@^1.6
