--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = atmelavr
 framework = arduino
 board = uno
-lib_deps = 
+upload_port = /dev/ttyUSB1
+monitor_port = /dev/ttyUSB1
+lib_deps =
 	adafruit/Adafruit NeoPixel@^1.7.0
 	adafruit/RTClib@^1.12.4
 	paulstoffregen/Time@^1.6
